# moonlight-android

./: .gitmodules  README.md  REFACTORING_SUMMARY.md  USB_PERMISSION_TESTING.md
.github/workflows/: build-release.yml
app/: build.gradle
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/java/com/limelight/: AppView.java  Game.java  HelpActivity.java  PcView.java  PosterContentProvider.java  ShortcutTrampoline.java
app/src/main/java/com/limelight/binding/audio/: AndroidAudioRenderer.java
app/src/main/java/com/limelight/binding/crypto/: AndroidCryptoProvider.java
app/src/main/java/com/limelight/binding/input/: ControllerHandler.java  (+1 more)
app/src/main/java/com/limelight/computers/: ComputerDatabaseManager.java  ComputerManagerService.java  IdentityManager.java  PairingService.java
app/src/main/java/com/limelight/discovery/: DiscoveryService.java
app/src/main/java/com/limelight/grid/: AppGridAdapter.java
app/src/main/java/com/limelight/nvstream/: NvConnection.java  StreamConfiguration.java
app/src/main/java/com/limelight/preferences/: AddComputerManually.java  GamepadTestActivity.java  MMKVPreferenceManager.java  PreferenceConfiguration.java  StreamSettings.java  VulkanPreferences.java  WireGuardSettingsActivity.java  WireGuardSettingsFragment.java
app/src/main/java/com/limelight/utils/: CacheHelper.java  Dialog.java  LatencyNotificationHelper.java  ServerHelper.java  SpinnerDialog.java  StatsNotificationHelper.java  TcpReachability.java  UiHelper.java  Vector2d.java  VulkanHelper.java
app/src/main/jni/moonlight-core/: callbacks.c
app/src/main/jni/moonlight-core-rs/: Android.mk  Cargo.toml  README.md  build-android.ps1  build-android.sh  build.rs  deps.toml  wg_intercept.h
app/src/main/jni/moonlight-core-rs/.cargo/: config.toml
app/src/main/jni/moonlight-core-rs/src/: callbacks.rs  controller.rs  crypto.rs  ffi.rs  jni_bridge.rs  jni_helpers.rs  lib.rs  opus.rs  platform_sockets.rs  tun_stack.rs  usb_ids.rs  wg_http.rs  wg_socket.rs  wireguard.rs  wireguard_config.rs
app/src/main/jni/moonlight-core-rs/src/callbacks/: audio.rs  connection.rs  mod.rs  video.rs
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_game.xml  activity_gamepad_test.xml  activity_pc_view.xml  activity_wireguard_settings.xml  gamepad_info_item.xml  pc_grid_item.xml  pc_grid_view.xml
app/src/main/res/mipmap-anydpi-v26/: ic_pc_scut.xml
app/src/main/res/values/: arrays.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
docs/: CHANGES_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md
(+31 files in other folders)
