[package]
name = "moonlight-core-rs"
version = "0.1.0"
edition = "2021"
authors = ["Moonlight Team"]
description = "Moonlight streaming client core library for Android"
license = "GPL-3.0"
links = "moonlight-common-c"

[lib]
name = "moonlight_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = { version = "0.21", default-features = false }
log = "0.4"
android_logger = "0.14"
once_cell = "1.19"
libc = "0.2"
# Ring for crypto operations (pure Rust, good cross-compilation support)
ring = "0.17"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

