[package]
name = "moonlight-core-rs"
version = "0.1.0"
edition = "2021"
authors = ["Moonlight Game Streaming Project","qwe7002"]
description = "Moonlight streaming client core library for Android"
license = "GPL-3.0"
links = "moonlight-common-c"

[lib]
name = "moonlight_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
# Ring for crypto operations (pure Rust, good cross-compilation support)
ring = "0.17.14"
# AES-CBC support (ring doesn't support CBC mode)
# Enable hardware acceleration (ARMv8 Crypto Extensions on ARM)
aes = { version = "0.8.4", features = ["hazmat"] }
cbc = "0.1.2"
# Logging support
log = "0.4"
# BoringTun - userspace WireGuard implementation (no system TUN required)
boringtun = "0.5"
# X25519 key exchange for WireGuard (same version as boringtun uses)
x25519-dalek = "2.0.0-rc.3"
# Base64 for WireGuard key encoding
base64 = "0.22"
# Etherparse for TCP/IP packet construction and parsing (used by virtual TCP stack)
etherparse = "0.16"
# Parking lot for efficient synchronization
parking_lot = "0.12"
# High-performance channels for zero-copy UDP data delivery (much faster than std::sync::mpsc)
crossbeam-channel = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
# Android logging backend
android_logger = "0.14"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 0
# Don't strip symbols - JNI functions need to be exported
strip = false
# Enable overflow checks for safety in debug
overflow-checks = true
# Include debug symbols for debugging
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
# Don't strip symbols - JNI functions need to be exported
strip = false
# Disable overflow checks for performance in release
overflow-checks = false
# No debug symbols in release
debug = false

# Note: Hardware AES acceleration flags are configured in .cargo/config.toml

